gcc/testsuite/rust/rustc/ui/issues/issue-68091-unicode-ident-after-if.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* {} // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

fn main() {
    x!(if);
}

